crates/shipper-cli/tests/snapshots/e2e_expanded__plan_multi_crate.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>
registry: crates-io (https://crates.io)
workspace_root: <WORKSPACE_ROOT>

Total packages to publish: 3
Plan summary:
  Publishable packages: 3
  Skipped packages: 0
  Internal dependency edges: 2
  Publish levels: 3

  1. core-lib@0.2.0 (no workspace dependencies)
  2. mid-lib@0.3.0 (depends on: core-lib@0.2.0)
  3. top-app@0.4.0 (depends on: mid-lib@0.3.0)
