crates/shipper-cli/tests/snapshots/e2e_expanded__plan_multiple_packages_filter.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>
registry: crates-io (https://crates.io)
workspace_root: <WORKSPACE_ROOT>

Total packages to publish: 2
Plan summary:
  Publishable packages: 2
  Skipped packages: 0
  Internal dependency edges: 1
  Publish levels: 2

  1. core-lib@0.2.0 (no workspace dependencies)
  2. mid-lib@0.3.0 (depends on: core-lib@0.2.0)
